--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,16 @@ jobs:
           echo Deploying $version
           aws s3 cp dist s3://${{ secrets.APP_BUCKET }} --recursive
           aws cloudfront create-invalidation --distribution-id ${{ secrets.DISTRIBUTION_ID }} --paths "/*"
+  
+  deploy:
+  needs: build
+  permissions:
+    id-token: write
+  runs-on: ubuntu-latest
+  environment:
+    name: production
+    url: https://pizza.byucsstudent.click
+  
   release:
     needs:
       - build
